# pokemon-api

./: :  Cargo.toml  Dockerfile  README.md
src/: main.rs  pokeapi.rs  translate.rs
