[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
awc = { version = "2.0.3", features = ["rustls"] }
once_cell = "1.8.0"
serde = "1.0.127"
serde_json = "1.0.66"
tracing = "0.1.26"
tracing-actix-web = "0.2.1"
tracing-subscriber = "0.2.19"
