[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
awc = { version = "2.0", features = ["rustls"] }
once_cell = "1.8"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-actix-web = "0.2"
tracing-subscriber = "0.2"

[dev-dependencies]
pretty_assertions = "0.7"
